--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -22,7 +22,10 @@
         tools:layout="@layout/fragment_second">
 
         <action
+            app:launchSingleTop="true"
+            app:popExitAnim="@id/FirstFragment"
             android:id="@+id/action_SecondFragment_to_FirstFragment"
-            app:destination="@id/FirstFragment" />
+            app:destination="@id/FirstFragment"
+            app:popUpToInclusive="true" />
     </fragment>
 </navigation>
